--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "md5": "^2.3.0",
     "md5.js": "^1.3.5",
     "mogoose": "^0.0.1-security",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.3",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
